# fps_game

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: config.rs  game.rs  input.rs  mod.rs
src/entities/: mod.rs  player.rs  weapons.rs  world.rs
src/graphics/: camera.rs  mod.rs  renderer.rs
src/networking/: client.rs  mod.rs  protocol.rs  server.rs
src/physics/: collision.rs  mod.rs  movement.rs
src/ui/: hud.rs  menu.rs  mod.rs
src/utils/: logger.rs  math.rs  mod.rs
