[package]
name = "mygame"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Modern bir FPS oyunu"

[dependencies]
# Temel oyun motoru
bevy = "0.11.3"  # Oyun motoru framework'ü
wgpu = "0.16"  # Grafik API
rapier3d = "0.17"  # 3D fizik motoru
bevy_rapier3d = "0.22.0"
bevy_egui = "0.21.0"

# Ağ bağlantısı için
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI için
egui = "0.22"
egui-wgpu = "0.22"

# Yardımcı kütüphaneler
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[profile.dev]
opt-level = 1  # Geliştirme sırasında temel optimizasyonlar

[profile.release]
opt-level = 3  # Maksimum optimizasyon
lto = true     # Link-time optimizasyonu
codegen-units = 1  # Daha iyi optimizasyon için
panic = 'abort'  # Panic durumunda stack trace olmadan direkt sonlandır 